# SpaceLaunchNow-Server

./: .dockerignore  .env.example  .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .safety-project.ini  .semgrepignore  CHANGELOG.md  Dockerfile  Dockerfile.debug  Jenkinsfile  Makefile  README.md  agencies.json  astronaut.py  bot.py  client_secret.json  custom_storages.py  db.sqlite3  db.sqlite3_back  dependabot.yml  dependency-changes.diff  docker-compose.celery.yml  docker-compose.discord.yml  docker-compose.test.yml  docker-compose.yml  dump.rdb  launchers.json  orbiters.json  pyproject.toml  requirements.txt  rerun_models.py  setup.cfg  test-after.txt  test-before.txt  test-outdated.txt  test-packages.txt
.github/: CICD_README.md  copilot-instructions.md  labeler.yml
.github/scripts/: parse-package-updates.py
.github/workflows/: build-master.yml  build-release.yml  ci.yml  dependencies.yml  deploy-production.yml  helm-chart.yml  labeler.yml  performance.yml  pr-checks.yml  promote.yml  python-code-checker.yml  python-test.yml  safety.yml  security-semgrep.yml
.history/: pyproject_20240730105246.toml
api/: admin.py  apps.py  models.py  serializers.py  sitemaps.py  views.py
api/filters/: UpcomingFilter.py
api/forms/: admin_forms.py
api/migrations/: 00010_astronauts_populate_slug.py  0001_initial.py  0002_auto_20170727_2011.py  0002_auto_20181106_0031.py  0003_auto_20170731_2054.py  0003_auto_20181106_0042.py  0004_auto_20170731_2121.py  0004_auto_20181120_2035.py  0004_auto_20181122_2325.py  0005_astronauts_orbiter_orbiterflight_spacestation.py  0005_auto_20171114_0054.py  0005_auto_20181122_2325.py  0005_auto_20181122_2359.py  0005_auto_20181124_0138.py  0005_auto_20181124_2214.py  0005_auto_20181125_1429.py  0005_auto_20181125_1758.py  0006_astronauts_orbiter_orbiterflight_spacestation.py  0006_auto_20171130_2208.py  0006_auto_20181127_0004.py  0007_astronaut_fields.py  0007_auto_20171213_1509.py  0008_auto_20171213_1624.py  0008_auto_20181127_2205.py  0008_auto_20181127_2322.py  0009_astronauts_slug.py  0009_auto_20171213_1630.py  0010_auto_20171213_1647.py  0011_auto_20171213_1726.py  0011_auto_20181128_2212.py  0012_auto_20171220_0005.py  0012_auto_20181205_0221.py  0012_auto_20181205_1651.py  0012_launch_new_id.py  0013_auto_20181204_2220.py  0013_auto_20181205_0221.py  0013_auto_20181205_0227.py  0013_delete_launcher.py  0014_auto_20180425_0009.py  0014_auto_20181204_2220.py  (+200 more)
api/tests/: test__base.py  test_agency.py  test_astronauts.py  test_configurations.py  test_launcher.py  test_launches.py  test_orbiters.py  test_spacecraft_config.py  test_spacestations.py
api/utils/: base_router.py  custom_serializers.py  data_importer.py  deserializer.py  utilities.py
api/v1/: filter.py  router.py  serializers.py  views.py
api/v2/: router.py  serializers.py  views.py
api/v200/: filter.py  serializers.py  views.py
api/v201/: router.py  serializers.py  views.py
api/v300/: filters.py  serializers.py  views.py
api/v310/: filter.py  router.py  serializers.py  views.py
api/v320/: filter.py  router.py  serializers.py  views.py
api/v321/: views.py
api/v330/: filter.py  router.py  views.py
api/v331/: router.py
api/v340/: filter.py  router.py
api/v350/: router.py
app/: admin.py  models.py  views.py
app/migrations/: 0001_initial.py  0002_auto_20181027_1325.py  0002_staff_bio.py  0003_auto_20181027_1327.py  0003_auto_20181101_1830.py
autoscaler/: autoscaler.py  digitalocean_helper.py  jenkins.py  models.py  tasks.py
autoscaler/migrations/: 0001_initial.py
bot/: __init__.py  admin.py  apps.py  models.py  permission.py  serializer.py  tasks.py  views.py
bot/app/: DailyDigest.py  Notifications.py  bot_main.py  buffer.py  digest.py  instagram.py  notifications.py  sync.py
bot/cogs/: about.py  admin.py  example.py  launches.py  news.py  notifications.py  reddit.py  twitter.py
bot/discord/: utils.py
bot/libraries/: launchlibrarysdk.py  onesignalsdk.py
bot/migrations/: 0001_initial.py  0002_auto_20181106_0056.py  0002_rename_last_daily.py  0003_add_digest_record.py  0003_auto_20181106_0754.py  0004_dailydigestrecord_data.py  0004_remove_notification_launch.py  0005_launch_img_url.py  0005_notification_launch.py  0006_auto_20171011_1828.py  0006_auto_20181209_0012.py  0007_auto_20171012_0030.py  0007_auto_20190426_1154.py  0008_auto_20171012_0049.py  0008_auto_20190428_1044.py  0009_auto_20171030_1636.py  0009_newsitem_description.py  0010_auto_20171106_2342.py  0010_auto_20190722_1808.py  0011_auto_20171114_0054.py  0011_auto_20190723_1859.py  0011_notification.py  0012_auto_20190826_2004.py  0012_notification_last_notification_sent.py  0013_auto_20190928_1208.py  0013_notification_last_notification_recipient_count.py  0014_auto_20180625_2128.py  0014_auto_20180628_2105.py  0014_auto_20180701_2151.py  0014_auto_20190928_1214.py  0015_articlenotifications.py  0015_auto_20180626_0102.py  0015_auto_20180702_1233.py  0016_auto_20180626_0913.py  0016_auto_20180703_2216.py  0016_auto_20200805_1604.py  0017_auto_20180703_2222.py  0017_launchnotificationrecord_migrate_launch_id.py  0018_auto_20180705_1555.py  (+27 more)
configurations/: admin.py  apps.py  models.py
docker/: .env.example  README.md  docker-compose.stack.yml  docker-compose.test.yml  docker-compose.yml
docs/: PRIVATE_PYPI_SETUP.md
env/: pip-selfcheck.json
k8s/: README.md  ansible.cfg  deploy-argocd.sh  deploy-sln.yml  inventory  requirements.yml  run-deploy.sh  validate-gitops.sh
landing/: views.py
manifests/: README.md  deploy-manifests.sh
requirements/: common.txt  dev.txt  prod.txt
spacelaunchnow/: base_models.py  celery.py  config.py  context_processor.py  example-config.py  example_config.py  pagination.py  settings.py  storage_backends.py  urls.py  wsgi.py
src/: Pipfile  bot.py  custom_storages.py  manage.py  prefetches.py  sln_custom_storages.py  version.py
terraform/: .terraform.lock.hcl  backend.tf  deploy.sh  dns.tf  main.tf  terraform.tfvars.example  variables.tf
web/: apps.py  filters.py  sitemaps.py  tables.py  tests.py  views.py
(+770 files in other folders)
