[tool.poetry]
name = "spacelaunchnow-server"
version = "4.4.6"
description = "The Backend and Webserver for Space Launch Now"
authors = ["Caleb Jones <ca.jones9119@gmail.com>"]
readme = "README.md"
packages = [
    {include = "app", from = "src"},
    {include = "autoscaler", from = "src"},
    {include = "spacelaunchnow", from = "src"},
    {include = "web", from = "src"},
]

[tool.poetry.dependencies]
python = ">=3.10.12,<4.0"
boto3 = "==1.23.0"
botocore = "==1.26.0"
coverage = "==6.4.4"
Collectfast = "==2.2.0"
Django = "^4.2.1"
django-bootstrap4 = "==22.2"
django-bootstrap-form = "==3.4"
django-cachalot = "^2.6.1"
django-compat = "==1.0.15"
django-cors-headers = "==3.13.0"
django-cleanup = "==6.0.0"
django-debug-toolbar = "==3.6.0"
django-embed-video = "==1.4.5"
django-extensions = "==3.2.0"
django-filter = "==2.4.0"
django-health-check = "==3.16.7"
django-jenkins = "==0.110.0"
django-mathfilters = "==1.0.0"
django-robots = "==6.1"
django-storages = "==1.12.3"
django-tz-detect = "==0.4.0"
django-tables2 = "==2.4.1"
django-user-agents = "==0.4.0"
djangorestframework = "3.14.0"
djangorestframework-bulk = "0.2.1"
djangorestframework-queryfields = "1.0.0"
drf-spectacular = "^0.26.4"
goose3 = "==3.1.11"
gunicorn = "^22.0.0"
num2word = "==1.0.1"
pilkit = "==2.0"
Pillow = "==10.3.0"
pyfcm = "==1.5.1"
pytz = "==2022.2.1"
psycopg2-binary = "2.9.7"
python-digitalocean = "==1.17.0"
python-dateutil = "==2.8.2"
praw = "==7.6.0"
regex = "==2022.8.17"
sorl-thumbnail = "==12.9.0"
sorl-thumbnail-serializer-field = "==0.2.1"
python-semantic-release = "7.34.6"
twitter = "==1.18.0"
tzlocal = "==4.2"
django-launch-library = {version = "^19.3.1", source = "tsd"}
environs = "^9.5.0"
django-jet-reboot = "^1.3.3"
pymemcache = "^4.0.0"
sentry-sdk = {extras = ["django"], version = "^1.42.0"}
django-silk = "^5.1.0"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
commitizen = "^2.37.0"
toml = "^0.10.2"
pre-commit = "^2.20.0"
radon = "^5.1.0"
vulture = "^2.6"
cohesion = "^1.0.0"
ruff = "^0.3.7"

[tool.poetry.group.ci]
optional = true

[tool.poetry.group.ci.dependencies]
unittest-xml-reporting = "==3.2.0"

[[tool.poetry.source]]
name = "tsd"
url = "https://pypi.spacelaunchnow.me/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



###############################################################################
#
#                             SEMANTIC RELEASE
#
###############################################################################

[tool.semantic_release]
version_variable = [
    "src/version.py:__version__"
]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]
branch = "master"

upload_to_repository = false
upload_to_release = true

build_command = "pip install poetry && poetry build"


###############################################################################
#
#                               Commitizen
#
###############################################################################

[tool.commitizen]
name = "cz_conventional_commits"
version = "3.2.0"
tag_format = "v$version"


###############################################################################
#
#                               RUFF SETTINGS
#
###############################################################################
[tool.ruff]
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]