[tool.poetry]
name = "spacelaunchnow-server"
version = "4.39.8"
description = "The Backend and Web server for Space Launch Now"
authors = ["Caleb Jones <ca.jones9119@gmail.com>"]
readme = "README.md"
packages = [
    {include = "app", from = "src"},
    {include = "autoscaler", from = "src"},
    {include = "spacelaunchnow", from = "src"},
    {include = "web", from = "src"},
]

[tool.poetry.dependencies]
python = ">=3.14.0,<3.15.0"
# django-launch-library is the source of truth for shared dependencies.
# Django, DRF, sorl-thumbnail, sentry-sdk, environs, psycopg, etc. are
# inherited transitively from it — do NOT re-declare them here, or the
# server will pin versions that conflict with the library.
django-launch-library = {version = "^21.67.0", source = "tsd"}

# Server-only dependencies (not provided by django-launch-library):
Collectfast = "==2.2.0"
django-bootstrap4 = "==22.2"
django-bootstrap-form = "==3.4"
django-embed-video = "==1.4.10"
django-mathfilters = "==1.0.0"
django-robots = "==6.1"
django-tz-detect = "==0.4.0"
django-tables2 = "==2.4.1"
django-user-agents = "==0.4.0"
num2word = "==1.0.1"
pyfcm = "==2.0.6"
pytz = "==2022.2.1"
python-digitalocean = "==1.17.0"
python-dateutil = "==2.8.2"
regex = "==2025.7.29 "
tzlocal = "==4.2"
toml = "^0.10.2"
redis = "^6.2.0"
hiredis = "^3.2.1"
python-json-logger = "^3.3.0"
kubernetes = "^33.1.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
commitizen = "^2.37.0"
toml = "^0.10.2"
pre-commit = "^2.20.0"
radon = "^5.1.0"
vulture = "^2.6"
cohesion = "^1.0.0"
ruff = "^0.12.12"
safety = "^3.6.0"

[tool.poetry.group.ci]
optional = true

[tool.poetry.group.ci.dependencies]
unittest-xml-reporting = "==3.2.0"

[[tool.poetry.source]]
name = "tsd"
url = "https://pypi.thespacedevs.com/simple/"
priority = "supplemental"


[tool.semantic_release]
version_variable = [
    "src/version.py:__version__"
]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]
branch = "master"

upload_to_repository = false
upload_to_release = false

# This is a Django server, not a published package — the deployable artifact is
# the Docker image, and nothing pip-installs a built wheel/sdist. Skip the build
# (empty command = no-op) so the release job no longer needs a project-compatible
# Python interpreter inside the semantic-release action container.
build_command = ""


###############################################################################
#
#                               Commitizen
#
###############################################################################

[tool.commitizen]
name = "cz_conventional_commits"
version = "3.2.0"
tag_format = "v$version"


###############################################################################
#
#                               RUFF SETTINGS
#
###############################################################################

[tool.ruff]
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



###############################################################################
#
#                             SEMANTIC RELEASE
#
###############################################################################

